kubernetes/nautilus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nautilus-server
  namespace: nautilus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nautilus-server
  template:
    metadata:
      labels:
        app: nautilus-server
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nautilus-server
        image: fossephate/nautilus-backend:latest
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 3Gi
        ports:
        - containerPort: 5076
          name: api
        command: ["/bin/bash", "-c"]
        args: ["python nautiluscast.py --host 0.0.0.0 --log-to-stdout"]
