kubernetes/nautilus/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nautilus-server
  namespace: nautilus
spec:
  type: ClusterIP
  ports:
  - port: 5076
    targetPort: 5076
    name: api
  selector:
    app: nautilus-server
